--- a/代码/python/测试JupyterLab.ipynb
+++ b/代码/python/测试JupyterLab.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "607fe2a4",
+   "id": "26eef066-6688-473b-b76f-b638db74a88f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world!!!\n"
+      "hello jupyter lab!!!\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world!!!\")"
+    "print(\"hello jupyter lab!!!\")"
    ]
   }
  ],
